--- a/css/_input.scss
+++ b/css/_input.scss
@@ -29,11 +29,11 @@
 .container{
 //  container start
 
-  input[type=radio] {
+  input[type="radio"] {
     display: none;
   }
 
-  input[type=radio] + label {
+  input[type="radio"] + label {
     cursor: pointer;
 
     &:hover {
@@ -41,7 +41,7 @@
     }
   }
 
-  input[type=radio]:checked + label {
+  input[type="radio"]:checked + label {
 
   }
 
